# hello-world.rs

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: main.rs
translations/: bg.json  en.json  es.json  ru.json
